--- a/themes/hueman/layout/_widget/soflair.ejs
+++ b/themes/hueman/layout/_widget/soflair.ejs
@@ -1,3 +1,9 @@
-<a style="margin:0 auto;width: 210px;display: block;" href="http://stackoverflow.com/users/2316414/richard-seal">
+<div style="margin:0 auto;width: 210px;display: block;align:center;">
+<a href="http://sitecore.stackexchange.com/users/70">
+  <img src="http://sitecore.stackexchange.com/users/flair/70.png" width="208" height="58" alt="profile for Richard Seal at Sitecore Stack Exchange, Q&amp;A for professional and enthusiast Sitecorians" title="profile for Richard Seal at Sitecore Stack Exchange">
+</a>
+
+<a href="http://stackoverflow.com/users/2316414/richard-seal">
   <img src="http://stackoverflow.com/users/flair/2316414.png" width="208" height="58" alt="profile for Richard Seal at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Richard Seal at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 </a>
+</div>
