--- a/themes/hueman/layout/_partial/article.ejs
+++ b/themes/hueman/layout/_partial/article.ejs
@@ -33,6 +33,7 @@
         <%- partial('post/date', {class_name: 'article-date', date_format: null}) %>
       </p>
       <div class="article-entry" itemprop="articleBody">
+        <code>Estimated reading time:<span class="eta"></span></code>
         <%- post.content %>
       </div>
       <footer class="article-footer">
