--- a/themes/hueman/layout/_partial/header.ejs
+++ b/themes/hueman/layout/_partial/header.ejs
@@ -14,13 +14,16 @@
           
           <div class="mvp">
             <a href="http://www.sitecore.net/mvp" target="_blank">
-                <img src="/about/index/MVP2016.jpg" alt="Sitecore MVP 2017,2016" />
+              <img src="/about/index/MVP2016.jpg" alt="Sitecore MVP 2018, 2017,2016" />
             </a>
             <a href="http://www.sitecore.net/mvp" target="_blank">
-                <img src="/about/index/Technology2017.jpg" alt="Sitecore MVP 2017, 2016" />
+              <img src="/about/index/Technology2018.jpg" alt="Sitecore MVP 2018, 2017, 2016" />
             </a>
             <a href="http://www.sitecore.net/mvp" target="_blank">
-                <img src="/about/index/Technology2016.jpg" alt="Sitecore MVP 2017, 2016" />
+                <img src="/about/index/Technology2017.jpg" alt="Sitecore MVP 2018, 2017, 2016" />
+            </a>
+            <a href="http://www.sitecore.net/mvp" target="_blank">
+                <img src="/about/index/Technology2016.jpg" alt="Sitecore MVP 2018, 2017, 2016" />
             </a>
           </div>
           
